src/test/ui/bad/destructuring-assignment.stderr
error[E0070]: invalid left-hand side of assignment
  --> $DIR/destructuring-assignment.rs:6:5
   |
LL |     (a, b) = (3, 4);
   |     ------^^^^^^^^^
   |     |
   |     cannot assign to this expression
   |
   = note: destructuring assignments are not yet supported
   = note: for more information, see https://github.com/rust-lang/rfcs/issues/372

error[E0368]: binary assignment operation `+=` cannot be applied to type `({integer}, {integer})`
  --> $DIR/destructuring-assignment.rs:7:5
   |
LL |     (a, b) += (3, 4);
   |     ------^^^^^^^^^^
   |     |
   |     cannot use `+=` on type `({integer}, {integer})`
   |
   = note: an implementation of `std::ops::AddAssign` might be missing for `({integer}, {integer})`

error[E0067]: invalid left-hand side of assignment
  --> $DIR/destructuring-assignment.rs:7:12
   |
LL |     (a, b) += (3, 4);
   |     ------ ^^
   |     |
   |     cannot assign to this expression
   |
   = note: destructuring assignments are not yet supported
   = note: for more information, see https://github.com/rust-lang/rfcs/issues/372

error[E0070]: invalid left-hand side of assignment
  --> $DIR/destructuring-assignment.rs:10:5
   |
LL |     [a, b] = [3, 4];
   |     ------^^^^^^^^^
   |     |
   |     cannot assign to this expression
   |
   = note: destructuring assignments are not yet supported
   = note: for more information, see https://github.com/rust-lang/rfcs/issues/372

error[E0368]: binary assignment operation `+=` cannot be applied to type `[{integer}; 2]`
  --> $DIR/destructuring-assignment.rs:11:5
   |
LL |     [a, b] += [3, 4];
   |     ------^^^^^^^^^^
   |     |
   |     cannot use `+=` on type `[{integer}; 2]`
   |
   = note: an implementation of `std::ops::AddAssign` might be missing for `[{integer}; 2]`

error[E0067]: invalid left-hand side of assignment
  --> $DIR/destructuring-assignment.rs:11:12
   |
LL |     [a, b] += [3, 4];
   |     ------ ^^
   |     |
   |     cannot assign to this expression
   |
   = note: destructuring assignments are not yet supported
   = note: for more information, see https://github.com/rust-lang/rfcs/issues/372

error[E0070]: invalid left-hand side of assignment
  --> $DIR/destructuring-assignment.rs:16:5
   |
LL |     S { x: a, y: b } = s;
   |     ----------------^^^^
   |     |
   |     cannot assign to this expression
   |
   = note: destructuring assignments are not yet supported
   = note: for more information, see https://github.com/rust-lang/rfcs/issues/372

error[E0368]: binary assignment operation `+=` cannot be applied to type `S`
  --> $DIR/destructuring-assignment.rs:17:5
   |
LL |     S { x: a, y: b } += s;
   |     ----------------^^^^^
   |     |
   |     cannot use `+=` on type `S`
   |
   = note: an implementation of `std::ops::AddAssign` might be missing for `S`

error[E0067]: invalid left-hand side of assignment
  --> $DIR/destructuring-assignment.rs:17:22
   |
LL |     S { x: a, y: b } += s;
   |     ---------------- ^^
   |     |
   |     cannot assign to this expression
   |
   = note: destructuring assignments are not yet supported
   = note: for more information, see https://github.com/rust-lang/rfcs/issues/372

error[E0070]: invalid left-hand side of assignment
  --> $DIR/destructuring-assignment.rs:20:5
   |
LL |     S { x: a, ..s } = S { x: 3, y: 4 };
   |     ---------------^^^^^^^^^^^^^^^^^^^
   |     |
   |     cannot assign to this expression
   |
   = note: destructuring assignments are not yet supported
   = note: for more information, see https://github.com/rust-lang/rfcs/issues/372

error[E0070]: invalid left-hand side of assignment
  --> $DIR/destructuring-assignment.rs:24:5
   |
LL |     ((a, b), c) = ((3, 4), 5);
   |     -----------^^^^^^^^^^^^^^
   |     |
   |     cannot assign to this expression
   |
   = note: destructuring assignments are not yet supported
   = note: for more information, see https://github.com/rust-lang/rfcs/issues/372

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0067, E0070, E0368.
For more information about an error, try `rustc --explain E0067`.
